Set baseURL for GitHub Pages

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.andrejkovacevic.com/"
+baseURL = "https://blajh.github.io/andrejkovacevic-site/"
 languageCode = 'en-us'
 title = "Andrej Kovacevic"
 theme = "PaperMod"
