--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,6 @@ baseURL = "https://www.andrejkovacevic.com"
 languageCode = 'en-us'
 title = "Andrej Kovacevic"
 theme = "PaperMod"
+
+[params]
+hideFooter = true
